[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/Portrait.gd" type="Script" id=2]
[ext_resource path="res://sprites/portraits/dog_portrait2.png" type="Texture" id=3]
[ext_resource path="res://sprites/portraits/dog_portrait7.png" type="Texture" id=4]
[ext_resource path="res://sprites/portraits/dog_portrait1.png" type="Texture" id=5]
[ext_resource path="res://sprites/lifebar_fill.png" type="Texture" id=6]
[ext_resource path="res://sprites/portraits/dog_portrait6.png" type="Texture" id=7]
[ext_resource path="res://sprites/portraits/dog_portrait3.png" type="Texture" id=8]
[ext_resource path="res://sprites/portraits/dog_portrait4.png" type="Texture" id=9]
[ext_resource path="res://sprites/BONE_HEALTH_BAR.png" type="Texture" id=10]
[ext_resource path="res://sprites/KEYBOARD.png" type="Texture" id=11]
[ext_resource path="res://sprites/DOG FACE BACKGROUND BONES.png" type="Texture" id=12]
[ext_resource path="res://sprites/square.png" type="Texture" id=13]

[node name="GUI" type="Node"]
script = ExtResource( 1 )

[node name="Portrait" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = -20.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalmPortrait" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JuicedPortrait" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RiledPortrait" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 40.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuckWildPortrait" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonkersPortrait" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WilinPortrait" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="Portrait"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.8958
margin_top = -89.3745
margin_right = 48.1042
margin_bottom = 6.62552
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -80.0
margin_right = 396.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" type="TextureRect" parent="."]
margin_left = 618.78
margin_top = 455.491
margin_right = 907.78
margin_bottom = 551.491
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="49" type="TextureRect" parent="Keyboard"]
margin_left = 32.9594
margin_top = 8.97708
margin_right = 47.9594
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="50" type="TextureRect" parent="Keyboard"]
margin_left = 50.6516
margin_top = 8.97708
margin_right = 65.6516
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="51" type="TextureRect" parent="Keyboard"]
margin_left = 69.1132
margin_top = 8.97708
margin_right = 84.1132
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="52" type="TextureRect" parent="Keyboard"]
margin_left = 86.8055
margin_top = 8.97708
margin_right = 101.806
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="53" type="TextureRect" parent="Keyboard"]
margin_left = 105.267
margin_top = 8.97708
margin_right = 120.267
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="54" type="TextureRect" parent="Keyboard"]
margin_left = 122.959
margin_top = 8.97708
margin_right = 137.959
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="55" type="TextureRect" parent="Keyboard"]
margin_left = 141.421
margin_top = 8.97708
margin_right = 156.421
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="56" type="TextureRect" parent="Keyboard"]
margin_left = 159.113
margin_top = 8.97708
margin_right = 174.113
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="57" type="TextureRect" parent="Keyboard"]
margin_left = 176.805
margin_top = 8.97708
margin_right = 191.805
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="48" type="TextureRect" parent="Keyboard"]
margin_left = 195.267
margin_top = 8.97708
margin_right = 210.267
margin_bottom = 23.9771
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="81" type="TextureRect" parent="Keyboard"]
margin_left = 42.1902
margin_top = 25.9001
margin_right = 57.1902
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="87" type="TextureRect" parent="Keyboard"]
margin_left = 59.8824
margin_top = 25.9001
margin_right = 74.8824
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="69" type="TextureRect" parent="Keyboard"]
margin_left = 78.344
margin_top = 25.9001
margin_right = 93.344
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="82" type="TextureRect" parent="Keyboard"]
margin_left = 96.0363
margin_top = 25.9001
margin_right = 111.036
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="84" type="TextureRect" parent="Keyboard"]
margin_left = 114.498
margin_top = 25.9001
margin_right = 129.498
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="89" type="TextureRect" parent="Keyboard"]
margin_left = 132.19
margin_top = 25.9001
margin_right = 147.19
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="85" type="TextureRect" parent="Keyboard"]
margin_left = 150.652
margin_top = 25.9001
margin_right = 165.652
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="73" type="TextureRect" parent="Keyboard"]
margin_left = 168.344
margin_top = 25.9001
margin_right = 183.344
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="79" type="TextureRect" parent="Keyboard"]
margin_left = 186.036
margin_top = 25.9001
margin_right = 201.036
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="80" type="TextureRect" parent="Keyboard"]
margin_left = 204.498
margin_top = 25.9001
margin_right = 219.498
margin_bottom = 40.9001
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="65" type="TextureRect" parent="Keyboard"]
margin_left = 46.8056
margin_top = 42.8232
margin_right = 61.8056
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="83" type="TextureRect" parent="Keyboard"]
margin_left = 64.4979
margin_top = 42.8232
margin_right = 79.4979
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="68" type="TextureRect" parent="Keyboard"]
margin_left = 82.9594
margin_top = 42.8232
margin_right = 97.9594
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="70" type="TextureRect" parent="Keyboard"]
margin_left = 100.652
margin_top = 42.8232
margin_right = 115.652
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="71" type="TextureRect" parent="Keyboard"]
margin_left = 119.113
margin_top = 42.8232
margin_right = 134.113
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="72" type="TextureRect" parent="Keyboard"]
margin_left = 136.806
margin_top = 42.8232
margin_right = 151.806
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="74" type="TextureRect" parent="Keyboard"]
margin_left = 155.267
margin_top = 42.8232
margin_right = 170.267
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="75" type="TextureRect" parent="Keyboard"]
margin_left = 172.96
margin_top = 42.8232
margin_right = 187.96
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="76" type="TextureRect" parent="Keyboard"]
margin_left = 190.652
margin_top = 42.8232
margin_right = 205.652
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="59" type="TextureRect" parent="Keyboard"]
margin_left = 209.113
margin_top = 42.8232
margin_right = 224.113
margin_bottom = 57.8232
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="90" type="TextureRect" parent="Keyboard"]
margin_left = 56.0366
margin_top = 59.7462
margin_right = 71.0366
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="88" type="TextureRect" parent="Keyboard"]
margin_left = 73.7289
margin_top = 59.7462
margin_right = 88.7289
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="67" type="TextureRect" parent="Keyboard"]
margin_left = 92.1904
margin_top = 59.7462
margin_right = 107.19
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="86" type="TextureRect" parent="Keyboard"]
margin_left = 109.883
margin_top = 59.7462
margin_right = 124.883
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="66" type="TextureRect" parent="Keyboard"]
margin_left = 128.344
margin_top = 59.7462
margin_right = 143.344
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="78" type="TextureRect" parent="Keyboard"]
margin_left = 146.037
margin_top = 59.7462
margin_right = 161.037
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="91" type="TextureRect" parent="Keyboard"]
margin_left = 164.498
margin_top = 59.7462
margin_right = 179.498
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="44" type="TextureRect" parent="Keyboard"]
margin_left = 182.19
margin_top = 59.7462
margin_right = 197.19
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="46" type="TextureRect" parent="Keyboard"]
margin_left = 199.883
margin_top = 59.7462
margin_right = 214.883
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="47" type="TextureRect" parent="Keyboard"]
margin_left = 218.344
margin_top = 59.7462
margin_right = 233.344
margin_bottom = 74.7462
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
